--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -37,6 +37,27 @@ body {
     height: 330px;
 
 }
+.had-verifi{
+  background-color: green;
+    color: white;
+    border-radius: 20px 20px 0px 0px;
+    position: relative;
+    bottom: 26px;
+    padding: 15px;
+
+}
+.verifi-block{
+  background-color: white;
+  border-radius: 20px;
+
+}
+.error-verifi{
+  text-align: center;
+  width: 100%;
+ 
+
+}
+
 .order-profile{
   line-height: 30px;
   margin-top: 2px;
@@ -46,7 +67,16 @@ body {
   align-content: flex-end;
   justify-content: flex-start;
 }
-
+.footerTwo{
+  background: black;
+  padding: 0 0 30px 0;
+  color: #fff;
+  font-size: 14px;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+}
 
 .title-order{
   font-weight: 600;
@@ -152,9 +182,8 @@ h6 {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  align-content: center;
-  justify-content: flex-start;
   align-items: center;
+  justify-content: space-around;
 }
 .pdf{
   text-decoration:underline !important;
@@ -1500,7 +1529,30 @@ width: 25px;
 .contact .php-email-form input {
   height: 44px;
 }
+.input-remeber {
+  width: 15px;
+  height: 22px !important;
+  padding: 0px;
+  margin: 0;
+  vertical-align: bottom;
+  position: relative;
+  right: 5px;
 
+}
+.reset-p{
+      background: #1bac91;
+    border: 0; 
+    padding: 10px 24px;
+     color: #fff;
+    transition: 0.4s;
+     border-radius: 4px;
+}
+
+.rember{
+  display: block;
+  padding-left: 15px;
+  text-indent: -15px;
+}
 .contact .php-email-form textarea {
   padding: 10px 12px;
 }
@@ -1546,6 +1598,7 @@ width: 25px;
   padding: 0 0 30px 0;
   color: #fff;
   font-size: 14px;
+  
 }
 
 #footer .footer-top {
