--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -88,6 +88,7 @@ body {
 .date-prof{
   color: #1bac91 ;
   font-weight: 700;
+  font-size: 12px;
   text-align: end;
 }
 .psuccess{
@@ -96,7 +97,6 @@ body {
   font-size: 15px;
   text-align: center;
   border-radius: 9px;
-  padding: 6px;
 }
 .psecondary{
   background-color: #6c757d;
@@ -104,8 +104,19 @@ body {
   font-size: 15px;
   text-align: center;
   border-radius: 9px;
-  padding: 6px;
 
+}
+.package-button{
+  background: #1bac91;
+  border: 0;
+  padding: 10px 24px;
+  color: #fff;
+  transition: 0.4s;
+  border-radius: 4px;
+}
+.package-button:hover{
+  background: #30bfa5;
+  color: white;
 }
 
 
